<resources>
    <string name="app_name">GoalConnect</string>
    <string name="goalconnect">GoalConnect</string>
    <string name="join_the_volunteer_n_program">Join the Volunteer \n Program</string>
    <string name="buat_perbedaan_di_komunitasmu">Buat perbedaan di komunitasmu !</string>
    <string name="get_started">Get Started</string>
    <string name="username_kamu">Username Kamu</string>
    <string name="username">Username</string>
    <string name="password_kamu">Password Kamu</string>
    <string name="email">Email</string>
    <string name="email_kamu">Email Kamu</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_in_with">Or Register with</string>
    <string name="line">line</string>
    <string name="logo">logo</string>

    <string name="default_web_client_id">1032746273364-t7rdiu73h53607994ar98mmhufvsev3l.apps.googleusercontent.com</string>
    <string name="admob_api_id">AIzaSyBVUxSbzQxZMq1BNZchVFFlwygmw1kh4w</string>
    <string name="log_out">Log out</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="home_background">Home Background</string>
    <string name="hallo_nosa">Hallo Nosa</string>
    <string name="lagi_mau_cari_event_apa_nih">Lagi Mau Cari Event Apa nih ?</string>
    <string name="cari_event">Cari Event</string>
    <string name="icon">icon</string>
    <string name="new_str">New</string>
    <string name="penanaman_biji_pohon">Penanaman Biji Pohon</string>
    <string name="volunteer">Volunteer</string>
    <string name="hutan_kota_gbk">Hutan Kota GBK</string>
    <string name="event">Event</string>
    <string name="music_party">Music Party</string>
    <string name="booth_administration">Booth Administration</string>
    <string name="panggung_ancol">Panggung Ancol</string>
    <string name="festival_layangan">Festival Layangan</string>
    <string name="fund_rising">Fund Rising</string>
    <string name="tebet_eco_park">Tebet Eco Park</string>
    <string name="belum_punya_akun">belum Punya Akun ?</string>
    <string name="buat_di_sini">Buat di sini !</string>
    <string name="login_ke_akun_mu_dulu_ya">Login Ke Akun mu dulu ya</string>
</resources>