<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/goalconnect"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="16dp"
        android:layout_marginStart="48dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/username" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="362dp"
        android:layout_height="54dp"
        android:layout_below="@id/textView4"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/username_kamu"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="14sp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_username"
        android:layout_marginTop="16dp"
        android:layout_marginStart="48dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/email" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="362dp"
        android:layout_height="54dp"
        android:layout_below="@id/textView5"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/email_kamu"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="14sp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_email"
        android:layout_marginTop="16dp"
        android:layout_marginStart="48dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/password" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="362dp"
        android:layout_height="54dp"
        android:layout_below="@id/textView6"
        android:layout_marginTop="8dp"
        android:autofillHints="no"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/password_kamu"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="14sp"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/btn_sign_up"
        android:layout_width="375dp"
        android:layout_height="70dp"
        android:layout_below="@id/et_password"
        android:layout_marginTop="64dp"
        android:background="@drawable/sign_up_button"
        android:contentDescription="@string/sign_up"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_sign_up"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/or_sign_in_with"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/btn_google_sign_in"
        android:layout_width="362dp"
        android:layout_height="70dp"
        android:layout_below="@id/textView7"
        android:layout_marginTop="48dp"
        android:background="@drawable/google_button"
        android:contentDescription="@string/sign_up"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_sign_up"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="48dp"
        android:layout_toLeftOf="@id/textView7"
        android:background="@drawable/line"
        android:contentDescription="@string/line" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_sign_up"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:layout_toRightOf="@id/textView7"
        android:background="@drawable/line"
        android:contentDescription="@string/line" />

</RelativeLayout>
