<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/goalconnect"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="16dp"
        android:layout_marginStart="48dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login_ke_akun_mu_dulu_ya" />

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="362dp"
        android:layout_height="54dp"
        android:layout_below="@id/textView4"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/email"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="14sp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/et_login_passsword"
        android:layout_width="362dp"
        android:layout_height="54dp"
        android:layout_below="@id/et_login_email"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="14sp"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/btn_sign_in"
        android:layout_width="375dp"
        android:layout_height="70dp"
        android:layout_below="@id/et_login_passsword"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_sign_in"
        android:contentDescription="@string/sign_up"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:layout_below="@id/btn_sign_in">
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/belum_punya_akun"/>

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:focusable="true"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/secondary"
            android:text="@string/buat_di_sini"
            android:clickable="true"/>
    </LinearLayout>

</RelativeLayout>
