<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".HomeActivity">

    <!-- Kontainer Scrollable -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:clipToPadding="true"
        android:paddingBottom="90dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Konten Scrollable -->
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@drawable/home_background"
                android:contentDescription="@string/home"
                android:scaleType="centerCrop" />

            <!-- Tambahkan elemen lainnya di sini -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_log_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:backgroundTint="@color/secondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <!-- Bottom App Bar -->
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="center"
        app:fabAnchorMode="cradle"
        app:fabCradleMargin="12dp"
        app:fabCradleVerticalOffset="12dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@android:color/transparent"
            app:menu="@menu/bottom_menu" />
    </com.google.android.material.bottomappbar.BottomAppBar>

    <!-- Floating Action Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/calendar"
        app:layout_anchor="@id/bottom_app_bar"
        android:backgroundTint="@color/secondary"
        app:layout_anchorGravity="center"
        app:fabSize="normal"
        app:useCompatPadding="true"
        android:src="@drawable/baseline_calendar_today_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
