<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?attr/selectableItemBackground">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/brown"
        app:cardCornerRadius="26dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ilustration2"
                android:contentDescription="@string/icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penanaman_biji_pohon"
                    android:textSize="20sp"
                    android:textColor="@color/primary"
                    android:fontFamily="@font/poppins_semibold"/>

                <TextView
                    android:id="@+id/categoryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:text="@string/volunteer"
                    android:textSize="13sp"
                    android:textColor="@color/primary"
                    android:fontFamily="@font/poppins_semibold"/>

                <TextView
                    android:id="@+id/indexImageTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:text="@string/volunteer"
                    android:textSize="13sp"
                    android:textColor="@color/primary"
                    android:fontFamily="@font/poppins_semibold"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="29dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="27dp">

                        <ImageView
                            android:layout_width="17dp"
                            android:layout_height="17dp"
                            android:backgroundTint="@color/primary"
                            android:background="@drawable/baseline_location_pin_24"
                            android:contentDescription="@string/icon" />

                        <TextView
                            android:id="@+id/placeTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hutan_kota_gbk"
                            android:textSize="9sp"
                            android:textColor="@color/primary"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/poppins_semibold"
                            tools:ignore="SmallSp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

<!--                        <ImageButton-->
<!--                            android:layout_width="108dp"-->
<!--                            android:layout_height="29dp"-->
<!--                            android:background="@drawable/see_more_button"-->
<!--                            android:contentDescription="@string/icon" />-->

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">
                    <Button
                        android:id="@+id/editButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Edit"
                        android:layout_weight="1"
                        android:layout_marginEnd="16dp"/>

                    <Button
                        android:id="@+id/deleteButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Delete"
                        android:layout_weight="1"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


<!--    <TextView-->
<!--        android:id="@+id/categoryTextView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textStyle="bold"-->
<!--        android:text="Title" />-->

<!--    <TextView-->
<!--        android:id="@+id/detailsTextView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Details" />-->

</LinearLayout>
